# gpGCL

./: .gitignore  Cargo.toml  Makefile
grammar/: Cargo.toml  build.rs
grammar/src/: ast.rs  cst.rs  fold.rs  formatting.rs  formatting_archive.rs  grammar.lalrpop  lib.rs  main.rs  transform.rs  transformer.rs  transpile.rs  visit.rs  visitor.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs  validate.rs
src/: ast.rs  grammar.lalrpop  lib.rs  main.rs
tester/: Cargo.toml
tester/src/: main.rs
unsupported/: Cargo.toml
unsupported/src/: lib.rs
web/: astro.config.mjs  package-lock.json  package.json  svelte.config.js  tsconfig.json
web/src/: app.html
web/src/components/: Editor.svelte  Playground.svelte  examples.ts
web/src/helpers/: validate_input.ts
web/src/lib/components/: Editor.svelte  Playground.svelte
web/src/lib/components/ui/: Button.svelte  Card.svelte  PlaygroundLayout.svelte  Select.svelte  SpinningLoader.svelte  TextField.svelte
web/src/lib/components/visualizations/: Plot.svelte  TextOutput.svelte
web/src/lib/config/: language.ts
web/src/lib/examples/: example-data.ts  example-programs.ts  example_data.ts  example_programs.ts
web/src/lib/helpers/: debounce.ts  server_functions.ts  stores.ts  validate_input.ts
web/src/pages/: index.astro
web/src/routes/: +layout.svelte  +page.md
web/src/routes/about/: +page.md
