[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.20.0", features = ["lexer"]}
grammar = { path = "../grammar" }
rocket = "=0.5.0-rc.3"
serde = "1.0.163"
serde_json = "1.0.96"
async-process = "1.7.0"
